# DPO-LoRA-Finetuning

./: .gitignore  README.md  dpo.py  llm_eval.py  plot_training.py  pyproject.toml  requirements.txt  training_log_mistral.json  training_log_qwen.json
scripts/: eval_llm_judge.py  plot_training.py  train.py
src/dpo_project/: __init__.py  data.py  evaluation.py  lora.py  losses.py  training.py
src/dpo_project/cli/: __init__.py  eval_llm_judge.py  plot_training.py  train.py
